Tue Nov 10  15:01:06 GMT 2020 Lee Noar  <lee.noar@sky.com>

	* include/regex.h: Add include for sys/types.h so that size_t
	is defined.
	Submitted by Dominic Hamon.

Mon Aug  3  17:27:05 BST 2020 Lee Noar  <lee.noar@sky.com>

	* include/pthread.h(PTHREAD_MUTEX_INITIALIZER,
	PTHREAD_RWLOCK_INITIALIZER): Fix static initialisers.

Sat Jul 25  11:03:24 BST 2020 Alan Buckley <alan_baa@hotmail.com>
     
	* recipe/files/gcc/libunixlib/kernel/kosbget.s: Fix osbget
	as it was always returning an error

Fri Jul 24 16:46:05 BST  2020  Lee Noar  <lee.noar@sky.com>

	* include/pthread.h(PTHREAD_COND_INITIALIZER): Swap order
	to match struct __pthread_cond.

Thu Jul 23 17:47:04 BST  2020  Lee Noar  <lee.noar@sky.com>

	* ctype/isblank.c: New file. Implement isblank function.
	* Makefile.am: Add above file to build.
	* include/ctype.h(isblank): The isblank() macro should return
	TRUE if the given character is a space or a tab. The other
	macros use the territory module to determine their values,
	but this doesn't seem possible for isblank(). Instead, test
	for the characters directly. It seems unlikely that different
	territories would interpret space and tab differently to what
	we would expect.
	Note that I did consider the fact that the macro argument
	appears twice and may be an issue for side effects, but
	isprint() also uses its argument twice.

Thu Jul 23 16:46:03 BST  2020  Lee Noar  <lee.noar@sky.com>

	* include/pthread.h(struct __pthread_cond): Swap "waiting" and
	"clock_id" positions in an attempt to retain compatibility with
	older versions of Unixlib. The GCCSDK release 3 version of Unixlib
	(and other libraries built against it) expect "waiting" to be at
	offset 0 of the struct and future releases should ensure that it
	remains so.

Wed Jul 22 16:23:02 BST  2020  Lee Noar  <lee.noar@sky.com>

	* pthread/cond.c(pthread_cond_init): Fix bug introduced
	in r7252. The attr parameter can be NULL, which means
	use default values. Fixes pthread_cond_init failure in