@@ -1,3 +1,8 @@
+Tue Nov 10  15:32:07 GMT 2020 Lee Noar  <lee.noar@sky.com>
+
+	* gcccompat/atomics.c: Add missing 64-bit atomic functions.
+	Submitted by Cameron Cawley.
+
 Tue Nov 10  15:01:06 GMT 2020 Lee Noar  <lee.noar@sky.com>
 
 	* include/regex.h: Add include for sys/types.h so that size_t
